[gd_scene load_steps=11 format=3 uid="uid://u0mj8gu3purm"]

[ext_resource type="Script" uid="uid://byu5852x5uuo8" path="res://scenes/objects/players/rachel/weapons/balloon_adaptor.gd" id="1_ogl21"]
[ext_resource type="Texture2D" uid="uid://c15jpit0rifem" path="res://sprites/players/rachel/weapons/Balloon Adaptor.png" id="1_y3hl4"]
[ext_resource type="Shader" uid="uid://b3xb8j1icuyp" path="res://shaders/PaletteSwap.gdshader" id="2_scny7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vbtb2"]
shader = ExtResource("2_scny7")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4bo5w"]
shader = ExtResource("2_scny7")
shader_parameter/skip_first_row = true
shader_parameter/use_palette_alpha = false
shader_parameter/fps = 6.0

[sub_resource type="AtlasTexture" id="AtlasTexture_rn4gk"]
atlas = ExtResource("1_y3hl4")
region = Rect2(0, 14, 26, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_l8bon"]
atlas = ExtResource("1_y3hl4")
region = Rect2(26, 14, 26, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_43ujy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rn4gk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l8bon")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eotyb"]
size = Vector2(26, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rn7hi"]
size = Vector2(26, 2)

[node name="Balloon Adaptor" type="AnimatableBody2D"]
sync_to_physics = false
script = ExtResource("1_ogl21")

[node name="Graphics" type="Node2D" parent="."]

[node name="Top" type="Sprite2D" parent="Graphics"]
material = SubResource("ShaderMaterial_vbtb2")
position = Vector2(0, -7)
texture = ExtResource("1_y3hl4")
hframes = 2
vframes = 2

[node name="Bottom" type="AnimatedSprite2D" parent="Graphics"]
material = SubResource("ShaderMaterial_4bo5w")
position = Vector2(0, 7)
sprite_frames = SubResource("SpriteFrames_43ujy")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_eotyb")
one_way_collision = true
one_way_collision_margin = 4.0

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_rn7hi")

[node name="Timer" type="Timer" parent="."]
wait_time = 3.333
one_shot = true
autostart = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
